Introduction and thereotical background parts

--- a/Szakdolgozat/Thesis/src/bib/mybib.bib
+++ b/Szakdolgozat/Thesis/src/bib/mybib.bib
@@ -1,71 +1,268 @@
-@book{Wettl04,
-  author    = {Ferenc Wettl and Gyula Mayer and Péter Szabó},
-  publisher = {Panem Könyvkiadó},
-  title     = {\LaTeX~kézikönyv},
-  year      = {2004},
+@online{Luxemburg2025,
+  author    = {Deloitte Luxemburg},
+  title     = {{ Crunch time series for CFOs: Finance 2025 revisited }},
+  year      = {2025},
+  url       = {https://www.deloitte.com/us/en/what-we-do/capabilities/finance-transformation/articles/future-finance-trends-2025.html},
+  note      = {Accessed: 2025-10-05}
 }
 
-@article{Candy86,
-  author       = {James C. Candy},
-  journaltitle = {{IEEE} Trans.\ on Communications},
-  month        = {01},
-  note         = {\doi{10.1109/TCOM.1986.1096432}},
-  number       = {1},
-  pages        = {72--76},
-  title        = {Decimation for Sigma Delta Modulation},
-  volume       = {34},
-  year         = {1986},
+@online{Westgaver2025,
+  author    = {Justin Morel de Westgaver, Michael Cravatte, Fethi Sadouki},
+  title     = {{ From controlling to strategic planning: How to maximize your finance function }},
+  year      = {2025},
+  url       = {https://www.deloitte.com/lu/en/our-thinking/future-of-advice/from-controlling-to-strategic-planning-how-to-maximize-your-finance-function.html},
+  note      = {Accessed: 2025-10-05}
 }
 
-@inproceedings{Lee87,
-  author    = {Wai L. Lee and Charles G. Sodini},
-  booktitle = {Proc.\ of the IEEE International Symposium on Circuits and Systems},
-  location  = {Philadelphia, PA, USA},
-  month     = {05~4--7},
-  pages     = {459--462},
-  title     = {A Topology for Higher Order Interpolative Coders},
-  vol       = {2},
-  year      = {1987},
+@online{Oschlisniok2025,
+  author    = {Thomas Oschlisniok},
+  title     = {{ Finance 2025 – Focus on the finance function of the future }},
+  year      = {2025},
+  url       = {https://kpmg.com/ch/en/insights/transformation/finance-function-2025.html},
+  note      = {Accessed: 2025-10-05}
 }
 
-@thesis{KissPhD,
-  author      = {Peter Kiss},
-  institution = {Technical University of Timi\c{s}oara, Romania},
-  month       = {04},
-  title       = {Adaptive Digital Compensation of Analog Circuit Imperfections for Cascaded Delta-Sigma Analog-to-Digital Converters},
-  type        = {phdthesis},
-  year        = {2000},
+@online{PwC2025,
+  author    = {PwC},
+  title     = {{ Future of finance: How you can lead with insight, not just oversight }},
+  year      = {2025},
+  url       = {https://www.pwc.com/us/en/services/consulting/business-transformation/library/future-of-finance.html},
+  note      = {Accessed: 2025-10-05}
 }
 
-@manual{Schreier00,
-  author       = {Richard Schreier},
-  month        = {01},
-  note         = {\url{http://www.mathworks.com/matlabcentral/fileexchange/}},
-  organization = {Oregon State University},
-  title        = {The Delta-Sigma Toolbox v5.2},
-  year         = {2000},
+@online{Gartner2025,
+  author    = {Gartner},
+  title     = {{ Finance 2030: 8 Forces Shaping the Future of Finance }},
+  year      = {2025},
+  url       = {https://www.gartner.com/en/finance/insights/future-of-finance-2030},
+  note      = {Accessed: 2025-10-05}
 }
 
-@misc{DipPortal,
-  author       = {{Budapesti Műszaki és Gazdaságtudományi Egyetem Villamosmérnöki és Informatikai Kar}},
-  howpublished = {\url{http://diplomaterv.vik.bme.hu/}},
-  title        = {Diplomaterv portál (2011. február 26.)},
+@online{Plaschke2018,
+  author    = {Frank Plaschke, Ishaan Seth, Rob Whiteman},
+  title     = {{ Bots, algorithms, and the future of the finance function }},
+  year      = {2018},
+  url       = {https://www.mckinsey.com/capabilities/strategy-and-corporate-finance/our-insights/bots-algorithms-and-the-future-of-the-finance-function},
+  note      = {Accessed: 2025-10-05}
 }
 
-@incollection{Mkrtychev:1997,
-  author    = {Mkrtychev, Alexey},
-  booktitle = {Logical Foundations of Computer Science},
-  doi       = {10.1007/3-540-63045-7_27},
-  editor    = {Adian, Sergei and Nerode, Anil},
-  isbn      = {978-3-540-63045-6},
-  pages     = {266-275},
-  publisher = {Springer Berlin Heidelberg},
-  series    = {Lecture Notes in Computer Science},
-  title     = {Models for the logic of proofs},
-  url       = {http://dx.doi.org/10.1007/3-540-63045-7_27},
-  volume    = {1234},
-  year      = {1997},
+@online{Partners2025,
+  author    = {Ardent Partners},
+  title     = {{ The State of ePayables 2025 Report }},
+  year      = {2025},
+  url       = {https://tradeshift.com/state-of-epayables-2025-report/},
+  note      = {Accessed: 2025-10-05}
 }
+
+@online{IBM2024,
+  author    = {IBM},
+  title     = {{ What is business process management (BPM)? }},
+  year      = {2024},
+  url       = {https://www.ibm.com/think/topics/business-process-management},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Gartner,
+  author    = {Gartner},
+  title     = {{ Business Process Management (BPM) }},
+  url       = {https://www.gartner.com/en/information-technology/glossary/business-process-management-bpm}
+}
+
+@online{Pratt2023,
+  author    = {Mary K. Pratt},
+  title     = {{ What is business process mapping? }},
+  year      = {2023},
+  url       = {https://www.techtarget.com/searchcio/definition/process-mapping},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Kissflow,
+  author    = {Kissflow},
+  title     = {{ 5 stages in Business Process Management (BPM) Lifecycle }},
+  url       = {https://kissflow.com/workflow/bpm/bpm-lifecycle-guide/},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Lawton2023,
+  author    = {George Lawton},
+  title     = {{ RPA vs. BPM: How are they different? }},
+  year      = {2023},
+  url       = {https://www.techtarget.com/searchcio/tip/RPA-vs-BPM-How-are-they-different},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Kissflow2025,
+  author    = {Kissflow},
+  title     = {{ RPA vs. BPM: What's the Difference? }},
+  year      = {2025},
+  url       = {https://kissflow.com/workflow/bpm/rpa-vs-bpm-whats-the-difference},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{IBM2021,
+  author    = {IBM},
+  title     = {{ What is Robotic Process Automation (RPA)? }},
+  year      = {2021},
+  url       = {https://www.ibm.com/think/topics/rpa},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{SAPWhat,
+  author    = {SAP},
+  title     = {{ What is robotic process automation (RPA)? }},
+  url       = {https://www.sap.com/products/technology-platform/process-automation/what-is-rpa.html},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Williams2021,
+  author    = {Paula Williams},
+  title     = {{ Five Ways to Use RPA in Finance }},
+  year      = {2021},
+  url       = {https://www.ibm.com/think/topics/rpa-for-finance},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Gartner2024,
+  author    = {Gartner},
+  title     = {{ 3 Tactics to Demonstrate RPA’s Impact in Finance }},
+  year      = {2024},
+  url       = {https://www.gartner.com/en/finance/trends/finance-rpa},
+  note      = {Accessed: 2025-10-09}
+}
+
+@online{Anywhere,
+  author    = {Automation Anywhere},
+  title     = {{ What is Attended vs Unattended Robotic Process Automation (RPA)? }},
+  url       = {https://www.automationanywhere.com/rpa/attended-vs-unattended-rpa},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Microsoft,
+  author    = {Microsoft},
+  title     = {{ Attended and unattended scenarios }},
+  url       = {https://learn.microsoft.com/en-us/power-automate/guidance/planning/attended-unattended},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Gartner1,
+  author    = {Gartner},
+  title     = {{ Hyperautomation }},
+  url       = {https://www.gartner.com/en/information-technology/glossary/hyperautomation},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Gartner20251,
+  author    = {Gartner},
+  title     = {{ Gartner Identifies the Top Strategic Technology Trends for 2026 }},
+  year      = {2025},
+  url       = {https://www.gartner.com/en/newsroom/press-releases/2025-10-20-gartner-identifies-the-top-strategic-technology-trends-for-2026},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Team2021,
+  author    = {IBM Cloud Education Team},
+  title     = {{ Differentiating Between Intelligent Automation and Hyperautomation }},
+  year      = {2021},
+  url       = {https://www.ibm.com/think/topics/intelligent-automation-vs-hyperautomation},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{Kissflow20251,
+  author    = {Kissflow},
+  title     = {{ Hyperautomation: 101 Ultimate Guide for 2025-26 }},
+  year      = {2025},
+  url       = {https://kissflow.com/workflow/hyperautomation-complete-guide},
+  note      = {Accessed: 2025-10-08}
+}
+
+@online{SAPSAP,
+  author    = {SAP},
+  title     = {{ SAP Business Technology Platform }},
+  url       = {https://www.sap.com/products/technology-platform.html},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAPWhat1,
+  author    = {SAP},
+  title     = {{ What is SAP Business Technology Platform? }},
+  url       = {https://www.sap.com/sea/products/technology-platform/what-is-sap-business-technology-platform.html},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAPWhat2,
+  author    = {SAP},
+  title     = {{ What are SAP BTP platform capabilities? }},
+  url       = {https://www.sap.com/products/technology-platform/what-is-sap-business-technology-platform.html},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{Consulting,
+  author    = {NAV IT Consulting},
+  title     = {{ Transform Business with SAP Business Technology Platform (SAP BTP) }},
+  url       = {https://nav-it.com/transform-business-with-sap-business-technology-platform-sap-btp},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAPFeature,
+  author    = {SAP},
+  title     = {{ Feature Scope Description for SAP BTP, Cloud Foundry, ABAP, and Kyma Environments }},
+  url       = {https://help.sap.com/doc/5e8107bf49684962b897217040398007/Cloud/en-US/SAP_BTP_FSD.pdf},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{Gupta2023,
+  author    = {Raja Gupta},
+  title     = {{ Important Cloud Terminologies for Beginners }},
+  year      = {2023},
+  url       = {https://medium.com/@raja.gupta20/important-cloud-terminologies-for-beginners-50e474bbaf22},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{Gupta20231,
+  author    = {Raja Gupta},
+  title     = {{ Explaining SAP Business Technology Platform (SAP BTP) to a Beginner }},
+  year      = {2023},
+  url       = {https://community.sap.com/t5/technology-blog-posts-by-sap/explaining-sap-business-technology-platform-sap-btp-to-a-beginner-2025/ba-p/13557182},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{Gupta20232,
+  author    = {Raja Gupta},
+  title     = {{ Demystifying SAP Build for Beginners }},
+  year      = {2023},
+  url       = {https://community.sap.com/t5/technology-blog-posts-by-sap/demystifying-sap-build-for-beginners/ba-p/13553828},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAPWhat3,
+  author    = {SAP},
+  title     = {{ What is SAP Build? }},
+  url       = {https://help.sap.com/docs/build/sap-build-core/what-is-sap-build#loio7e50fa5e724c49d1a4352848275fd3cc__section_build_code},
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAP2022,
+  author    = {SAP},
+  title     = {{ Feature Scope Description for SAP Build Process Automation }},
+  year      = {2022},
+  url       = {https://help.sap.com/doc/b3c2de746b0645aeb627deda35b896a0/Cloud/en-US/11df00c55daf425bb7a447d63dbd5484.pdf },
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAPCreate,
+  author    = {SAP},
+  title     = {{ Create low-code digital workspaces }},
+  url       = {https://www.sap.com/products/technology-platform/workzone.html },
+  note      = {Accessed: 2025-10-20}
+}
+
+@online{SAPWhat4,
+  author    = {SAP},
+  title     = {{ What Is SAP Build Work Zone, standard edition? }},
+  url       = {https://help.sap.com/docs/build-work-zone-standard-edition/sap-build-work-zone-standard-edition/what-is-sap-build-work-zone-standard-edition},
+  note      = {Accessed: 2025-10-20}
+}
+```
 
 @report{Jeney,
   author      = {Jeney, Gábor},
