--- a/Szakdolgozat/Thesis/src/content/introduction.tex
+++ b/Szakdolgozat/Thesis/src/content/introduction.tex
@@ -3,7 +3,7 @@
 \label{chap:bevezetes}
 
 
-\section{Témafelvezetés: A Pénzügyi Funkció Stratégiai Átalakulása változás}
+\section{Témafelvezetés: A Pénzügyi Funkció Stratégiai Átalakulása változás megint}
 \label{sec:temafelvetes}
 
 A pénzügyi funkció (\textit{Finance}) drámai átalakuláson megy keresztül, amelyet a folyamatos költségcsökkentési nyomás és a mélyebb üzleti betekintést igénylő stratégiai tanácsadói szerep iránti növekvő igény egyaránt vezérel. A hagyományos, reaktív és tranzakció-fókuszú ,,eredménykimutató'' (\textit{scorekeeper}) szerepkörből a pénzügy egyre inkább proaktív, ,,stratégiai értékteremtővé'' (\textit{strategic value creator}) válik.
