--- a/Szakdolgozat/Thesis/src/thesis.tex
+++ b/Szakdolgozat/Thesis/src/thesis.tex
@@ -53,6 +53,9 @@
 %TODO import your own content
 \include{content/introduction}
 \include{content/theoretical-background}
+\include{content/invoice-processing-process-analysis}
+\include{content/automated-invoice-processing}
+\include{content/results-and-evaluation}
 %\include{content/latex-tools}
 %\include{content/thesis-format}
 %\include{content/template-usage}
